--- a/trunk/demos/demo1.html
+++ b/trunk/demos/demo1.html
@@ -3,13 +3,13 @@
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript" src="gvis.js"></script>
     <script type="text/javascript">
-      google.load("visualization", "1", {packages:["piechart"]});
+      google.load("visualization", "1", {packages:["geomap"]});
       google.setOnLoadCallback(drawChart);
       
       function drawChart() {
-          var chart = new GVis("chart_div", "piechart");
+          var chart = new GVis("chart_div", "geomap");
           chart.setRows([["CN", 1000], ["US", 5000], ["IN", 2500], ["DE", 4000], ["FR", 2200]]);
-          chart.draw({ is3D: true, width:600, height:360 });      
+          chart.draw({ colors:[0x008000, 0xb50b43], width:600, height:360 });      
       }
     </script>
   </head>
