--- a/trunk/demos/index.html
+++ b/trunk/demos/index.html
@@ -35,6 +35,7 @@
                 <option value="piechart">Pie Chart</option>
                 <option value="linechart">Line Chart</option>
                 <option value="barchart">Bar Chart</option>
+                <option value="columnchart">Column Chart</option>
                 <option value="areachart">Area Chart</option>
                 <option value="scatterchart">Scatter Chart</option>
                 <option value="imagesparkline">Image Spark Line</option>
